packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_s-f64-i32/module.wast
(module (func (result f64) (f64.convert_s/i32 (i64.const 0))))
